--- a/1.4/Source/StevesWalls/StevesWalls/StevesWalls.csproj
+++ b/1.4/Source/StevesWalls/StevesWalls/StevesWalls.csproj
@@ -67,12 +67,12 @@
     <Compile Include="DefModExtensions\ModExtension_Synthesizer.cs" />
     <Compile Include="DefOfs\SW_DefOf.cs" />
     <Compile Include="MapComps\StevesWallsMapComponent.cs" />
-    <Compile Include="ThingClasses\Building_3DPrinter_GlitterGlass.cs" />
     <Compile Include="Misc\Assets.cs" />
     <Compile Include="StevesWallsMain.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ThingClasses\Building_3DPrinter.cs" />
+    <Compile Include="ThingClasses\Building_Printer.cs" />
     <Compile Include="ThingClasses\Building_Synthesizer.cs" />
+    <Compile Include="ThingClasses\Class1.cs" />
     <Compile Include="Utils\AnimationUtil.cs" />
   </ItemGroup>
   <ItemGroup>
