--- a/1.4/Source/StevesWalls/StevesWalls/StevesWalls.csproj
+++ b/1.4/Source/StevesWalls/StevesWalls/StevesWalls.csproj
@@ -33,6 +33,7 @@
   <ItemGroup>
     <Reference Include="0Harmony, Version=2.2.2.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Lib.Harmony.2.2.2\lib\net472\0Harmony.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="Assembly-CSharp">
       <HintPath>..\..\..\..\..\..\RimWorldWin64_Data\Managed\Assembly-CSharp.dll</HintPath>
@@ -72,11 +73,13 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ThingClasses\Building_Printer.cs" />
     <Compile Include="ThingClasses\Building_Synthesizer.cs" />
-    <Compile Include="ThingClasses\Class1.cs" />
+    <Compile Include="ThingClasses\Building_PrinterBase.cs" />
     <Compile Include="Utils\AnimationUtil.cs" />
+    <Compile Include="Utils\PowerState.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
