--- a/1.4/Source/StevesWalls/StevesWalls/StevesWalls.csproj
+++ b/1.4/Source/StevesWalls/StevesWalls/StevesWalls.csproj
@@ -72,8 +72,10 @@
     <Compile Include="StevesWallsMain.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ThingClasses\Building_Printer.cs" />
-    <Compile Include="ThingClasses\Building_Synthesizer.cs" />
     <Compile Include="ThingClasses\Building_PrinterBase.cs" />
+    <Compile Include="ThingClasses\Building_Synthesizer.cs" />
+    <Compile Include="ThingComps\CompProperties\CompProperties_BuildingGraphics.cs" />
+    <Compile Include="ThingComps\Comp_BuildingGraphics.cs" />
     <Compile Include="Utils\AnimationUtil.cs" />
     <Compile Include="Utils\PowerState.cs" />
   </ItemGroup>
