--- a/1.4/Source/StevesWalls/StevesWalls/StevesWalls.csproj
+++ b/1.4/Source/StevesWalls/StevesWalls/StevesWalls.csproj
@@ -70,6 +70,8 @@
     <Compile Include="DefOfs\SW_DefOf.cs" />
     <Compile Include="MapComps\StevesWallsMapComponent.cs" />
     <Compile Include="Misc\Assets.cs" />
+    <Compile Include="Settings\StevesWallsMod.cs" />
+    <Compile Include="Settings\StevesWallsSettings.cs" />
     <Compile Include="StevesWallsMain.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ThingClasses\Building_Printer.cs" />
