color blending util + entities color fix

--- a/1.5/Source/StevesWalls/StevesWalls/StevesWalls.csproj
+++ b/1.5/Source/StevesWalls/StevesWalls/StevesWalls.csproj
@@ -75,6 +75,7 @@
     <Compile Include="ThingComps\Comp_AlertEffects.cs" />
     <Compile Include="ThingComps\CompProperties\CompProperties_AlertEffects.cs" />
     <Compile Include="Utils\AnimationUtil.cs" />
+    <Compile Include="Utils\ColorBlenderUtil.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
