log handler update
- added a new log handler for easier debugging

--- a/1.5/Source/StevesWalls/StevesWalls/StevesWalls.csproj
+++ b/1.5/Source/StevesWalls/StevesWalls/StevesWalls.csproj
@@ -78,6 +78,7 @@
     <Compile Include="ThingComps\CompProperties\CompProperties_AlertEffects.cs" />
     <Compile Include="Utils\AnimationUtil.cs" />
     <Compile Include="Utils\Assets.cs" />
+    <Compile Include="Utils\SWLog.cs" />
     <Compile Include="Utils\ColorBlenderUtil.cs" />
   </ItemGroup>
   <ItemGroup>
